# BerHot

./: .env  BUG.md  INTEGRATION_GUIDE.md  TECHNICAL_REPORT.md  TODO.md  ZHIHU_CRAWLER_PLAN.md  analysis.ipynb  analysis.json  document_info.csv  pipeline.py  pipeline_builders.py  pipeline_config.py  pipeline_io.py  pyproject.toml  report.html  run_aat.py  run_summary.json  scheduled.py  test.py  topics.csv  twitter_crawler.py  users.yaml
agent_tree/: __init__.py  batch_agent.py  head_agent.py  llm.py  meeting.py  meeting_agent.py  models.py  pipeline.py  platform_agent.py  x_analyst.py
crawl/: mindspider_bridge.py  sources.yaml
crawl/zhihu_crawler/: README.md  get_cookies.py  run.py  scrapy.cfg
crawl/zhihu_crawler/config/: questions.yaml  topics.yaml  users.yaml
crawl/zhihu_crawler/zhihu/: __init__.py  exporter.py  items.py  middlewares.py  pipelines.py  settings.py
crawl/zhihu_crawler/zhihu/providers/: __init__.py  firecrawl.py
crawl/zhihu_crawler/zhihu/spiders/: question_html_spider.py  question_spider.py  search_spider.py  topic_spider.py  user_spider.py
data/: technologyreview_texts.json  twitter_texts.json  twitter_texts_20260330_113520.txt  twitter_users_crawl.json
data/fig/: report.html
data/snapshots/: twitter_20260401_070215.json
models/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
tests/: test_karpathy_truncation.py  test_preprocess.py  test_scheduled_x_analyst.py  test_twitter_crawler.py  test_x_analyst.py
utils/: preprocess.py  text_clean.py  tweet_parser.py  user_utils.py
(+3 files in other folders)
